# aula08_bootcamp_python

./: README.md  dados.csv  etl.py  pipeline.py  pyproject.toml  schema.py
