[project]
name = "aula08-bootcamp-python"
version = "0.1.0"
description = "AUla de bootcamp de Python"
authors = [
    {name = "Thales Dias",email = "thales.henriquesdias@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
